# rag-system

./: .env.example  .gitignore  LICENSE  README.md
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/routers/: __init__.py  api.py
backend/app/services/: __init__.py  answer_cache.py  cache.py  cache_warmup.py  conversation.py  deduplication.py  document_processor.py  embeddings.py  feedback.py  llm.py  llm_router.py  metadata.py  model_config_service.py  pii_detector.py  prompts.py  reranker.py  retriever.py  review.py  sensitive_filter.py  storage.py  stream.py  tenant.py  vector_store.py
backend/app/services/ingestion/: __init__.py  api_fetcher.py  base.py  crawler.py  db_sync.py
backend/app/utils/: __init__.py  audit.py  auth.py  metrics.py  rate_limit.py  validators.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/pages/: Admin.tsx  Chat.tsx  Documents.tsx  Login.tsx
frontend/src/types/: index.ts
k8s/: configmap.yaml  deploy.bat  grafana-alertmanager-config.yaml  hpa.yaml  ingress.yaml  namespace.yaml  prometheus-alerts.yaml  pvc.yaml  secrets.yaml
k8s/deployments/: milvus.yaml  minio.yaml  postgres.yaml  rag-api.yaml  redis.yaml
k8s/volumes/: pvc.yaml
